--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>AngularAPP</title>
   <script src="//cdn.auth0.com/js/lock-8.1.min.js"></script>
+
+  <link href="assets/nouislider.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,6 +16,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 </head>
 <body>
+<script src="assets/nouislider.min.js"></script>
+<div class="spinning-preloader-container">
+  <div class="spinning-preloader-elements"></div>
+</div>
 <app-root></app-root>
 </body>
 </html>
