--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <base href="/">
   <meta charset="utf-8">
   <title>AngularAPP</title>
+  <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+  <script src="http://www.goat1000.com/jquery.tagcanvas.min.js"></script>
+
   <script src="//cdn.auth0.com/js/lock-8.1.min.js"></script>
 
   <!--<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
