--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <!--<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
 
   <!--Export to pdf-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>-->
 
   <link href="assets/nouislider.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
